test/fail/comma-dangle-single-line.js
/* eslint-disable no-unused-vars -- We're only testing ESLint rules. */

// FAIL: comma-dangle

const commaDangleSingleLineYes = [1, 2,]
